# sambacc

./: .commitlintrc.json  .gitignore  .gitlint  .hgignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.copr/: Makefile
.github/: mergify.yml
.github/workflows/: ci.yml
docs/: configuration.md  release-process.md
examples/: addc.json  addc_ou.json  ctdb.json  example1.json  kmip.json  minimal.json
extras/: python-sambacc.spec
sambacc/: _xattr.py  addc.py  config.py  container_dns.py  ctdb.py  inotify_waiter.py  jfile.py  join.py  leader.py  main.py  netcmd_loader.py  nsswitch_loader.py  opener.py  passdb_loader.py  passwd_loader.py  paths.py  permissions.py  rados_opener.py  samba_cmds.py  simple_waiter.py  smbconf_api.py  smbconf_samba.py  textfile.py  typelets.py  url_opener.py
sambacc/ceph/: __init__.py  rados.py
sambacc/commands/: addc.py  check.py  cli.py  common.py  config.py  ctdb.py  dcmain.py  dns.py  initialize.py  join.py  main.py  run.py  skips.py  users.py
sambacc/commands/remotecontrol/: main.py  server.py
sambacc/commands/satellite/: __main__.py  keybridge.py
sambacc/grpc/: backend.py  config.py  conversions.py  rados_checker.py  server.py
sambacc/grpc/protobufs/: control.proto
sambacc/kmip/: scope.py
sambacc/schema/: conf-v0.schema.json  conf-v0.schema.yaml  conf_v0_schema.py  tool.py
sambacc/varlink/: endpoint.py  keybridge.py  server.py
sambacc/varlink/interfaces/: org.samba.containers.keybridge.varlink
tests/: test_addc.py  test_commands_config.py  test_config.py  test_container_dns.py  test_ctdb.py  test_grpc_backend.py  test_grpc_server.py  test_inotify_waiter.py  test_jfile.py  test_join.py  test_main.py  test_netcmd_loader.py  test_passdb_loader.py  test_passwd_loader.py  test_paths.py  test_permissions.py  test_rados_leak.py  test_rados_opener.py  test_samba_cmds.py  test_simmple_waiter.py  test_skips.py  test_smbconf_api.py  test_smbconf_samba.py  test_url_opener.py  test_varlink_server.py
tests/container/: Containerfile  build.sh
