# Note: I'd prefer that everything here be removed in favor of
# pyproject.toml, but the timing isn't quite right yet for PEP 621 support in
# setuptools so we need to put the values here for now.

[metadata]
name = sambacc
version = 0.1
description = Samba Container Configurator
author = John Mulligan
author_email = phlogistonjohn@asynchrono.us
readme = file: README.md
url = https://github.com/samba-in-kubernetes/sambacc
license = GPL3

[options]
packages = sambacc, sambacc.commands, sambacc.schema
include_package_data = True

[options.entry_points]
console_scripts =
    samba-container = sambacc.commands.main:main
    samba-dc-container = sambacc.commands.dcmain:main

[options.data_files]
share/sambacc/examples =
  examples/ctdb.json
  examples/example1.json
  examples/minimal.json
  examples/addc.json

[options.extras_require]
validation =
    jsonschema>=4.10
yaml =
    PyYAML>=5.4
toml =
    tomli;python_version<"3.11"
rados =
    rados
